WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63512
REGRESSION (
r89733
): fast/text/zero-font-size.html is failing on Leopard
https://bugs.webkit.org/show_bug.cgi?id=63512
Summary
REGRESSION (r89733): fast/text/zero-font-size.html is failing on Leopard
mitz
Reported
2011-06-27 23:14:12 PDT
REGRESSION (
r89733
): fast/text/zero-font-size.html is failing on Leopard
Attachments
Patch
(1.59 KB, patch)
2011-06-27 23:18 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-06-27 23:18:55 PDT
Created
attachment 98863
[details]
Patch
mitz
Comment 2
2011-06-28 08:57:15 PDT
Fixed in
r89933
. <
http://trac.webkit.org/r89933
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug