REGRESSION (r89733): fast/text/zero-font-size.html is failing on Leopard https://bugs.webkit.org/show_bug.cgi?id=63512

Reviewed by Darin Adler.

* platform/graphics/mac/SimpleFontDataMac.mm:
(WebCore::SimpleFontData::platformWidthForGlyph): Initialize the advance local variable, because
on Leopard wkGetGlyphTransformedAdvances can return successfully yet not update the variable when
the font size is 0. Presumably, r89733 exposed this by changing the values put on the stack just
before this function is called.



Canonical link: https://commits.webkit.org/79219@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89933 268f45cc-cd09-0410-ab3c-d52691b4dbfc